--- a/apps/wallet/src/ui/index.template.html
+++ b/apps/wallet/src/ui/index.template.html
@@ -10,5 +10,6 @@
     </head>
     <body class="app-initializing">
         <div id="root"></div>
+        <div id="overlay-container"></div>
     </body>
 </html>
